Added used_plugins
Changed many places that use:
used_plugin to used_plugins PluginUsed to PluginsUsed
